--- a/src/app/layouts/main-layout/main-layout.component.css
+++ b/src/app/layouts/main-layout/main-layout.component.css
@@ -20,14 +20,21 @@
   margin-top: 10px;
   background: snow;
 }
-
+.popular{
+  width: 85%;
+}
 .width{
   width: 80%;
 }
 .genreStyle{
-  background: black;
+  background: darkgrey;
   width: 20%;
+   display: flex;
+  flex-direction: column;
 
+}
+.genreMovie{
+  background: black;
 }
 .GF{
   color: chocolate;
@@ -35,5 +42,9 @@
   font-size: 20px;
 }
 .listGenre{
+  height: 400px;
   margin-left: 30px;
+}
+.bottom{
+  width: 85%;
 }
