--- a/src/app/components/bottom/bottom.component.html
+++ b/src/app/components/bottom/bottom.component.html
@@ -1,12 +1,14 @@
 <div class="bottom">
-  <p class="text">
-    <b>Watch movies in HD online</b><br>
-    What to do after a hard day's work? Everyday life offers a lot of options, but almost everyone on our planet loves
-    to watch your favorite movies. We have created a convenient and unique cinema for watching videos in comfortable
-    conditions for you. You will never have to look for a free minute again to find suitable cinemas, have time to buy
-    at the box office or book tickets to your favorite places online. All this is left behind great prospects to watch
-    movies online in good HD quality on our website. Dear guest of the resource, we offer you to plunge into the
-    amazingly fascinating world right now - new movie rentals are available to all users around the clock!</p>
+  <p class="watch"><b>Watch movies in HD online</b></p>
+  <div class="text">
+      <p>What to do after a hard day's work? Everyday life offers a lot of options, but almost everyone on our planet loves
+        to watch your favorite movies. We have created a convenient and unique cinema for watching videos in comfortable
+        conditions for you. You will never have to look for a free minute again to find suitable cinemas, have time to buy
+        at the box office or book tickets to your favorite places online. All this is left behind great prospects to watch
+        movies online in good HD quality on our website. Dear guest of the resource, we offer you to plunge into the
+        amazingly fascinating world right now - new movie rentals are available to all users around the clock!</p>
+  <img src="https://news.cinecitta.com/photo.aspx?s=1&w=850&path=%2Fpublic%2Fnews%2F0085%2F85736%2Fla-verita-dolce-vita_0.jpg" width="260px" alt="bottom">
+  </div>
   <hr>
   <div class="cont">
     <div class="end">
