--- a/src/app/modules/movie/components/movie-list-card/movie-list-card.component.html
+++ b/src/app/modules/movie/components/movie-list-card/movie-list-card.component.html
@@ -1,9 +1,9 @@
-
 <div class="postStar">
 
-  <a routerLink="{{listCard?.id}}]" [state]="{data: listCard}" class="image" ><img src="{{poster+listCard?.poster_path}}" width="160px" height="250px"></a>
-<div class="beetwin">
- <a routerLink="{{listCard?.id}}]" [state]="{data: listCard}" class="ashka"> <b>{{listCard?.title}}</b></a>
- <p class="right">{{date}}</p> {{actio}}
-</div>
+  <a routerLink="{{listCard?.id}}]" [state]="{data: listCard}" class="image"><img src="{{poster+listCard?.poster_path}}"
+                                                                                  width="160px" height="250px"></a>
+  <div class="beetwin">
+    <a routerLink="{{listCard?.id}}]" [state]="{data: listCard}" class="ashka"> <b>{{listCard?.title}}</b></a>
+    <p class="right">{{date}}</p>
+  </div>
 </div>
