--- a/src/app/layouts/main-layout/main-layout.component.css
+++ b/src/app/layouts/main-layout/main-layout.component.css
@@ -17,7 +17,6 @@
  display: flex;
   justify-content: space-around;
   width: 85%;
-  margin-top: 10px;
   background: snow;
 }
 .popular{
@@ -25,6 +24,7 @@
 }
 .width{
   width: 80%;
+  min-width: 600px;
 }
 .genreStyle{
   background: darkgrey;
