--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -1,6 +1,7 @@
 <div class="layout">
   <app-header class="header"></app-header>
   <app-popular class="popular"></app-popular>
+  <app-find class="find"></app-find>
   <div class="rightPanel">
     <div class="width">
       <router-outlet></router-outlet>
@@ -13,6 +14,7 @@
         </div>
       </div>
       <div class="starMovie">
+        <app-top-ten></app-top-ten>
       </div>
     </div>
   </div>
