--- a/src/app/layouts/main-layout/main-layout.component.css
+++ b/src/app/layouts/main-layout/main-layout.component.css
@@ -12,15 +12,22 @@
   width: 85%;
   background: gray;
   margin-top: 5px;
+  min-width: 722px;
 }
 .rightPanel {
  display: flex;
   justify-content: space-around;
   width: 85%;
   background: snow;
+  min-width: 722px;
+}
+.find{
+  width: 85%;
+  min-width: 722px;
 }
 .popular{
   width: 85%;
+  min-width: 722px;
 }
 .width{
   width: 80%;
@@ -31,6 +38,7 @@
   width: 20%;
    display: flex;
   flex-direction: column;
+  min-width: 123px;
 
 }
 .genreMovie{
@@ -47,4 +55,5 @@
 }
 .bottom{
   width: 85%;
+  min-width: 722px;
 }
