--- a/src/app/modules/movie/components/movie-info/movie-info.component.html
+++ b/src/app/modules/movie/components/movie-info/movie-info.component.html
@@ -23,7 +23,7 @@
         <div class="rightPanel">
           <b>Genres :</b>
           <div>
-            <a *ngFor="let g of filmInfo.genres" [routerLink]="['movie']" [queryParams]="{ with_genres: g.id}"
+            <a *ngFor="let g of filmInfo.genres" [routerLink]="['/movie']" [queryParams]="{ with_genres: g.id}"
                queryParamsHandling="merge">{{g.name}}<br></a>
           </div>
         </div>
