--- a/src/app/components/find/find.component.html
+++ b/src/app/components/find/find.component.html
@@ -1,5 +1,8 @@
-<div>
+
+
+   <div class="line"></div>
   <form [formGroup]="form" >
-    <div><label><input type="search" formControlName="find" (keydown.enter)="onEnter()" ></label></div>
+    <div class="finder"><label><b>Search :  </b><input class="inPuti" type="search" formControlName="find" (keydown.enter)="onEnter()" ></label></div>
   </form>
-</div>
+
+
