--- a/src/app/modules/movie/components/movie-list/movie-list.component.css
+++ b/src/app/modules/movie/components/movie-list/movie-list.component.css
@@ -11,6 +11,8 @@
 .pagination{
   display: flex;
   justify-content: center;
+  padding-top: 20px;
+  padding-bottom: 40px;
 }
 a{
   font-size: 16px;
