--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,21 +1,25 @@
 .inHead {
   display: flex;
-  /*justify-content: space-between;*/
   align-items: center;
   justify-content: space-between;
   width: 100%;
 }
 .par{
   font-size: 20px;
-  color: white;
+  color: darkgrey;
   margin-right: 10px;
+ }
 
-}
 a{
   text-decoration: none;
    color: black;
 }
 .name{
-  font-size: 50px;
+  text-shadow: 1px 1px 2px black, 0 0 1em snow;
+  font-size: 40px;
   margin-left: 10px;
+}
+.name :hover {
+  color: darkgrey;
+  text-shadow: 1px 1px 2px black, 0 0 1em red;
 }
