--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,5 @@
 <div class="inHead">
-<div class="name"><b><a routerLink="movie">StepkoFilms</a></b></div> <p><a href="http://www.google.com"><span class="par">find yourself</span></a></p>
+  <div class="theme">tema </div>
+  <div class="name"><b><a routerLink="movie">StepkoFilms</a></b></div>
+  <p><a href="http://www.google.com"><span class="par">find yourself</span></a></p>
 </div>
