--- a/src/app/components/show-find/show-find.component.html
+++ b/src/app/components/show-find/show-find.component.html
@@ -1,1 +1,3 @@
-<p>show-find works!</p>
+<div class="search">
+<div class="block" *ngFor="let s of show"><a routerLink="/movie/{{s?.id}}"><span>{{s?.name}}</span></a></div>
+</div>
