--- a/src/app/modules/movie/components/top-ten/top-ten.component.css
+++ b/src/app/modules/movie/components/top-ten/top-ten.component.css
@@ -1,7 +1,22 @@
 .bottom {
-  border-bottom: 1px solid darkred;
+  /*border-bottom: 1px solid darkred;*/
+  display: flex;
+  padding-left: 7px;
 }
 a{
   text-decoration: none;
   color: darkslategray;
+}
+.text-ten {
+  margin-left: 10px;
+  margin-top: 10px;
+  font-size: 16px;
+}
+.text-ten :hover{
+  color: darkred;
+  font-size: 18px;
+}
+a :hover{
+  text-decoration: underline;
+  font-weight: 600;
 }
