--- a/src/app/modules/movie/components/movie-list/movie-list.component.css
+++ b/src/app/modules/movie/components/movie-list/movie-list.component.css
@@ -21,7 +21,9 @@ a{
 }
 a:hover{
   text-decoration: underline;
+  cursor: pointer;
 }
+
 .double-border-button {
   text-decoration: none;
   display: inline-block;
