--- a/src/app/modules/movie/components/movie-list/movie-list.component.html
+++ b/src/app/modules/movie/components/movie-list/movie-list.component.html
@@ -7,7 +7,7 @@
 
 <div class="pagination">
 
-  <a class="double-border-button" [routerLink]="['']" [queryParams]="{ page: page - 1}" queryParamsHandling="merge">
+  <a class="double-border-button" (click)="pageMinus()" >
     <<
   </a>
   <a class="double-border-button">- {{page}} -</a>
