all project, without dark-theme

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,7 @@
 <div class="inHead">
-  <div class="theme">tema </div>
+  <div class="theme">
+    <input (click)="toggleDarkTheme()" type="checkbox" id="switch" /><label for="switch">Toggle</label>
+  </div>
   <div class="name"><b><a routerLink="movie">StepkoFilms</a></b></div>
   <p><a href="http://www.google.com"><span class="par">find yourself</span></a></p>
 </div>
