--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -9,7 +9,9 @@
   color: darkgrey;
   margin-right: 10px;
  }
-
+.dark-theme{
+  color: gold;
+}
 a{
   text-decoration: none;
    color: black;
@@ -22,4 +24,53 @@ a{
 .name :hover {
   color: darkgrey;
   text-shadow: 1px 1px 2px black, 0 0 1em red;
+}
+.theme{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60px;
+  width: 100px;
+}
+input[type=checkbox]{
+  height: 0;
+  width: 0;
+  visibility: hidden;
+}
+
+label {
+  cursor: pointer;
+  text-indent: -9999px;
+  width: 80px;
+  height: 45px;
+  background: #ffffff;
+  display: block;
+  border-radius: 80px;
+  position: relative;
+}
+
+label:after {
+  content: '';
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 35px;
+  height: 35px;
+  background: #bada55;
+  border-radius: 40px;
+  transition: 0.3s;
+}
+
+input:checked + label {
+  background: #333333;
+}
+
+input:checked + label:after {
+  left: calc(100% - 5px);
+  transform: translateX(-100%);
+  background: #0e0000;
+}
+
+label:active:after {
+  width: 50px;
 }
