--- a/src/app/modules/movie/components/movie-list-card/movie-list-card.component.css
+++ b/src/app/modules/movie/components/movie-list-card/movie-list-card.component.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  color: #0e0000;
 }
 
 .image {
@@ -22,6 +22,7 @@
   flex-direction: column;
   height: 60px;
   width: 170px;
+  color: black;
 }
 
 p {
@@ -41,9 +42,13 @@ p {
   display: flex;
   justify-content: center;
   margin: 0 5px 0 5px;
-  color: black;
   font-size: 14px;
+
 }
+.dark{
+  color: black;
+}
+
 a {
   text-decoration: none;
 }
@@ -51,3 +56,4 @@ a {
 a:hover {
   text-decoration: underline;
 }
+
