--- a/src/app/modules/movie/components/movie-list-card/movie-list-card.component.html
+++ b/src/app/modules/movie/components/movie-list-card/movie-list-card.component.html
@@ -3,7 +3,7 @@
   <a routerLink="{{listCard?.id}}" class="image"><img src="{{poster+listCard?.poster_path}}" alt="post"
                                                                                   width="160px" height="250px"></a>
   <div class="beetwin">
-    <a routerLink="{{listCard?.id}}"  class="ashka"> <b>{{listCard?.title}}</b></a>
+    <div><a routerLink="{{listCard?.id}}" class="ashka"> <p><b class="dark">{{listCard?.title}}</b></p></a></div>
     <p class="right">{{date}}</p>
   </div>
 </div>
