--- a/src/app/modules/movie/components/movie-list/movie-list.component.css
+++ b/src/app/modules/movie/components/movie-list/movie-list.component.css
@@ -8,7 +8,9 @@
  justify-content: space-evenly;
 
 }
-
+.dark-theme{
+   color: snow;
+ }
 .pagination{
   display: flex;
   justify-content: center;
