--- a/src/app/modules/movie/components/movie-list/movie-list.component.html
+++ b/src/app/modules/movie/components/movie-list/movie-list.component.html
@@ -1,4 +1,4 @@
-<div class="wrap">
+<div class="wrap dark-theme">
   <app-movie-list-card  *ngFor="let m of results" [listCard]="m"></app-movie-list-card>
 
 </div>
