--- a/src/app/modules/movie/components/movie-info/movie-info.component.css
+++ b/src/app/modules/movie/components/movie-info/movie-info.component.css
@@ -51,8 +51,8 @@
 }
 
 a {
-  text-decoration: underline;
-  color: #0e0000;
+  color: darkred;
+  text-decoration: none;
 }
 
 .marg {
@@ -237,4 +237,11 @@ a.bot1:hover:before {
   margin-right: 20px;
   align-items: center;
 }
-
+.span {
+  color: darkred;
+}
+.span:hover{
+  text-decoration: darkred;
+  text-decoration: underline;
+  font-size: 16px;
+}
