--- a/src/app/modules/movie/components/movie-list/movie-list.component.css
+++ b/src/app/modules/movie/components/movie-list/movie-list.component.css
@@ -8,9 +8,7 @@
  justify-content: space-evenly;
 
 }
-.dark-theme{
-   color: snow;
- }
+
 .pagination{
   display: flex;
   justify-content: center;
@@ -33,8 +31,8 @@ a:hover{
   margin: 10px 20px;
   padding: 10px 30px;
   position: relative;
-  border: 2px solid #0e0000;
-  color: black;
+  border: 2px solid darkred;
+  color: darkred;
   font-family: 'Montserrat', sans-serif;
   transition: .4s;
 }
@@ -52,7 +50,7 @@ a:hover{
   transition: .4s;
 }
 .double-border-button:hover:after {
-  border-color: #0e0000;
+  border-color: darkred;
   width: calc(100% - 10px);
   height: calc(100% + 10px);
 }
