--- a/src/app/modules/movie/components/movie-info/movie-info.component.html
+++ b/src/app/modules/movie/components/movie-info/movie-info.component.html
@@ -22,7 +22,7 @@
           <p>{{filmInfo.budget}}</p></div>
         <div class="rightPanel">
           <b>Genres :</b>
-          <div >
+          <div>
             <a *ngFor="let g of filmInfo.genres" [routerLink]="['/movie']" [queryParams]="{ with_genres: g.id}"
                queryParamsHandling="merge"><span class="span">{{g.name}}</span><br></a>
           </div>
@@ -42,11 +42,7 @@
   </div>
   <div class="onVideo">
     <div class="video">
-      <div class="bottom">
-        <div class="d6"></div>
-      </div>
-      <div class="boton">
-      </div>
+      <iframe width="600" height="340" src="https://www.youtube.com/embed/KZjJ-CHmirU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
   </div>
   <div class="raiting">
@@ -54,22 +50,23 @@
     <div>
       <ul class="list-inline rating-list" style="padding-left: 0" *ngFor="let star of stars; let i= index">
         <li (click)="countStar(star)" [ngClass]="{'selected': (star <= selectedValue)}" (mouseover)="addClass(star)"
-            (mouseout)="removeClass()"> <span class="material-icons">star</span>
+            (mouseout)="removeClass()"><span class="material-icons">star</span>
         </li>
       </ul>
     </div>
   </div>
   <div class="form">
     <p class="formChapter"><b>Your review of the online movie and soundtrack:</b></p>
-    <form class="formich" [formGroup]="form" >
-      <div><label><b></b><input class="input" type="search" formControlName="find" ></label></div>
-      <div class="bttom"><div><label><b>name: </b><input class="inputTwo" type="search" formControlName="people"></label></div>
-      <div><b><a class="bot1" (click)="comment()" >Enter</a></b></div>
+    <form class="formich" [formGroup]="form">
+      <div><label><b></b><input class="input" type="search" formControlName="find"></label></div>
+      <div class="bttom">
+        <div><label><b>name: </b><input class="inputTwo" type="search" formControlName="people"></label></div>
+        <div><b><a class="bot1" (click)="comment()">Enter</a></b></div>
       </div>
     </form>
     <div>
       <div *ngFor="let p of useForm" class="coma">
-        <div class="people" ><b>{{p?.people}}</b></div>
+        <div class="people"><b>{{p?.people}}</b></div>
         <div>{{p?.find}}</div>
       </div>
     </div>
