--- a/src/app/modules/movie/components/movie-list-card/movie-list-card.component.css
+++ b/src/app/modules/movie/components/movie-list-card/movie-list-card.component.css
@@ -60,3 +60,40 @@ a{
   color: darkred;
   text-decoration: none;
 }
+.rating-list {
+  display: inline-block;
+  list-style: none;
+}
+.rating-list li {
+  font-size: 11px;
+  float: right;
+  color: darkred;
+  padding: 2px 1px;
+}
+.rating-list li:hover {
+  color: #ffd700;
+  text-shadow: 1px 0 1px #000,
+  0 1px 1px #000,
+  -1px 0 1px #000,
+  0 -1px 1px #000;
+}
+.rating-list li:hover ~ li {
+  color: #ffd700;
+  text-shadow: 1px 0 1px #000,
+  0 1px 1px #000,
+  -1px 0 1px #000,
+  0 -1px 1px #000;
+}
+.rating-list li.selected {
+  color: #ffd700;
+  text-shadow: 1px 0 1px #000,
+  0 1px 1px #000,
+  -1px 0 1px #000,
+  0 -1px 1px #000;
+}
+.star{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 20px;
+}
